dashboard small display fixed spacing between buttons

--- a/src/static/css/smartapi.css
+++ b/src/static/css/smartapi.css
@@ -1417,5 +1417,13 @@ body {
      transition: all .7s;
    }
 
+   .divWithImage{
+     background-size: cover;
+     width: 100%; 
+     min-height: 300px;
+     background-position: right;
+     display: block;
+   }
+
 
   /*MARCO CANO end*/
